end of part 2 of my Api Library
