# middleware/authMiddleware.js
@@ -1,0 +1,11 @@
+const isAuthenticated = (req, res, next) => {
+    if (req.isAuthenticated()) {
+        return next();
+    }
+
+    return res.status(401).json({
+        message: "Authentication required"
+    });
+};
+
+module.exports = isAuthenticated;
