# routes/books.js
@@ -2,20 +2,27 @@ const express = require("express");
 const router = express.Router();
 
 const booksController = require("../controllers/booksController");
+const isAuthenticated = require("../middleware/authMiddleware");
 
-// GET all books
+
+// GET all books (public)
 router.get("/", booksController.getAllBooks);
 
-// GET one book
+
+// GET one book (public)
 router.get("/:id", booksController.getBookById);
 
-// CREATE book
-router.post("/", booksController.createBook);
 
-// UPDATE book
-router.put("/:id", booksController.updateBook);
+// CREATE book (protected)
+router.post("/", isAuthenticated, booksController.createBook);
 
-// DELETE book
-router.delete("/:id", booksController.deleteBook);
+
+// UPDATE book (protected)
+router.put("/:id", isAuthenticated, booksController.updateBook);
+
+
+// DELETE book (protected)
+router.delete("/:id", isAuthenticated, booksController.deleteBook);
+
 
 module.exports = router;
