# routes/members.js
@@ -2,20 +2,27 @@ const express = require("express");
 const router = express.Router();
 
 const membersController = require("../controllers/membersController");
+const isAuthenticated = require("../middleware/authMiddleware");
 
-// GET all members
+
+// GET all members (public)
 router.get("/", membersController.getAllMembers);
 
-// GET one member
+
+// GET one member (public)
 router.get("/:id", membersController.getMemberById);
 
-// CREATE member
-router.post("/", membersController.createMember);
 
-// UPDATE member
-router.put("/:id", membersController.updateMember);
+// CREATE member (protected)
+router.post("/", isAuthenticated, membersController.createMember);
 
-// DELETE member
-router.delete("/:id", membersController.deleteMember);
+
+// UPDATE member (protected)
+router.put("/:id", isAuthenticated, membersController.updateMember);
+
+
+// DELETE member (protected)
+router.delete("/:id", isAuthenticated, membersController.deleteMember);
+
 
 module.exports = router;
